workspace-sf/force-app/main/default/objects/ComissaoFixa__c/ComissaoFixa__c.object-meta.xml
<CustomObject>
    <label>Comissão Fixa</label>
    <nameField>
        <label>Nome de ComissaoFixa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comissões Fixas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>