workspace-sf/force-app/main/default/objects/ComissaoFixa__c/fields/PercentualAgenciamento__c.field-meta.xml
<CustomField>
    <fullName>PercentualAgenciamento__c</fullName>
    <label>Percentual Agenciamento</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>