workspace-sf/force-app/main/default/objects/ComissaoFixa__c/fields/PercentualCorretagem__c.field-meta.xml
<CustomField>
    <fullName>PercentualCorretagem__c</fullName>
    <label>Percentual Corretagem</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>