workspace-sf/force-app/main/default/objects/ComissaoFixa__c/fields/Susep__c.field-meta.xml
<CustomField>
    <fullName>Susep__c</fullName>
    <label>Susep</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>